# internal/handlers/routes.go
@@ -60,10 +60,10 @@ func (h *Handler) InitRoutes() *mux.Router {
 	supplierGr.HandleFunc("/rm", h.deleteSupplier).Methods(http.MethodDelete, http.MethodOptions)
 	supplierGr.HandleFunc("/edit", h.editSupplier).Methods(http.MethodPut, http.MethodOptions)
 	//Application
-	//ordersGr := router.PathPrefix("/orders").Subrouter()
-	//ordersGr.HandleFunc("/new", h.createOrder).Methods(http.MethodPost, http.MethodOptions)
-	//ordersGr.HandleFunc("/list", h.getAllOrders).Methods(http.MethodGet, http.MethodOptions)
-	//ordersGr.HandleFunc("/by-id", h.getOrderById).Methods(http.MethodGet, http.MethodOptions)
+	ordersGr := router.PathPrefix("/orders").Subrouter()
+	ordersGr.HandleFunc("/new", h.addOrder).Methods(http.MethodPost, http.MethodOptions)
+	ordersGr.HandleFunc("/list", h.getAllOrders).Methods(http.MethodGet, http.MethodOptions)
+	ordersGr.HandleFunc("/by-id", h.getOrderById).Queries("order_id", "{order_id}").Methods(http.MethodGet, http.MethodOptions)
 	//ordersGr.HandleFunc("/edit", h.editOrder).Methods(http.MethodPut, http.MethodOptions)
 	//ordersGr.HandleFunc("/rm", h.deleteOrder).Methods(http.MethodDelete, http.MethodOptions)
 	//ordersGr.HandleFunc("/list-pdf", h.downloadOrdersPdf).Methods(http.MethodGet, http.MethodOptions)
